Prepared Statements + Redis Cache for schedule +Query Optimization